force-app/main/default/objects/Logger__e/Logger__e.object-meta.xml
<CustomObject>
    <description>Logger platform event</description>
    <label>Logger</label>
    <pluralLabel>Logger</pluralLabel>
</CustomObject>