force-app/main/default/objects/Logger__e/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <description>Logging Level</description>
    <label>Log Level</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>