force-app/main/default/objects/Logger__e/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <description>Logging user</description>
    <label>Logged By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>