force-app/main/default/objects/Logger__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Main Log message</description>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>