force-app/main/default/objects/Logger__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Class/Process name</description>
    <label>Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>