force-app/main/default/objects/Logger__e/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Full stack trace for detailed debugging</description>
    <label>Stack Trace</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>